<?xml version="1.0" encoding="utf-8"?>
<!-- 芝麻开花节节高 -->
<resources>
    <string name="app_name">芝麻球</string>
    <string name="app_description">芝麻球 - 蚂蚁森林和蚂蚁庄园自动化模块</string>
    <string name="xposed_description">芝麻开花节节高</string>
    
    <!-- 免责声明 -->
    <string name="app_disclaimer">本APP是为了学习研究而开发，免费开源，禁止用于任何商业用途，并禁止二次修改后闭源发布。<br/>请于24小时内卸载本APP。<br/>如果您是通过购买获得，请联系卖家退款或在平台举报卖家。⚠️</string>
    
    <!-- 通用 -->
    <string name="ok">OK</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="settings">设置</string>
    <string name="search">搜索</string>
    <string name="select_all">全选</string>
    <string name="select_invert">反选</string>
    
    <!-- 森林配置 -->
    <string name="forest_configuration">森林配置</string>
    <string name="collect_energy">收集能量</string>
    <string name="help_friend_collect">帮好友收取</string>
    <string name="energy_rain">能量雨</string>
    <string name="collect_watering_bubble">收取浇水泡</string>
    <string name="collect_prop">收取道具</string>
    <string name="use_double_card">使用双击卡</string>
    <string name="receive_forest_task_award">领取森林任务奖励</string>
    <string name="collect_gift_box">收取礼盒</string>
    
    <!-- 庄园配置 -->
    <string name="farm_configuration">庄园配置</string>
    <string name="enable_farm">启用庄园</string>
    <string name="feed_animal">喂养动物</string>
    <string name="receive_farm_task_award">领取庄园任务奖励</string>
    <string name="send_back_animal">送还动物</string>
    <string name="reward_friend">奖励好友</string>
    
    <!-- 日志 -->
    <string name="forest_log">森林日志</string>
    <string name="farm_log">庄园日志</string>
    <string name="all_log">所有日志</string>
    <string name="runtime_log">运行日志</string>
    <string name="view_all_log_file">查看所有日志</string>
    <string name="export_runtime_log_file">导出所有日志</string>
    
    <!-- 其他 -->
    <string name="immediate_effect">立即生效</string>
    <string name="show_toast">显示提示</string>
    <string name="unactivated">未激活</string>
    <string name="visit_github">访问GitHub</string>
</resources>
